# mie

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  plot.cpp
bakemie/: CMakeLists.txt  main.cpp
bakemie/src/: main.cpp
bakemie/src/plot/: color.h  graph.cpp  graph.h  image.cpp  image.h  stb.cpp
bakemie/src/plot/font/: base.h  psf.cpp  psf.h  truetype.cpp  truetype.h
lib/: complex.h  gpu.h  mie.cpp  mie.h
libmie/: CMakeLists.txt
libmie/mie/: particle.cpp  particle.h  solver.cpp  solver.h
libmie/mie/backend/: builtin.cpp  info.h  registry.cpp  registry.h
libmie/mie/backend/builtin/: cpu.cpp  cpu.h  cuda.cpp  cuda.h  opencl.cpp  opencl.h  opencl_kernel.c
libmie/mie/worker/: thread_pool.cpp  thread_pool.h
